Update babel to 7 & ava to 1

--- a/package.json
+++ b/package.json
@@ -28,19 +28,35 @@
   "author": "Brent Jackson",
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-do-expressions": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-bind": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "@compositor/log": "^1.0.0-0",
     "@mdx-js/loader": "^0.15.0",
     "@mdx-js/mdx": "^0.15.0",
     "@mdx-js/tag": "^0.15.0",
     "@rebass/markdown": "^1.0.0-1",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^8.0.0",
     "babel-plugin-macros": "^2.2.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.26.0",
     "browser-env": "^3.2.5",
     "buble": "0.19.4",
     "chalk": "^2.4.1",
@@ -85,7 +101,7 @@
   },
   "devDependencies": {
     "@compositor/logo": "^1.4.0",
-    "ava": "^0.25.0",
+    "ava": "^1.2.1",
     "isomorphic-fetch": "^2.2.1",
     "nyc": "^12.0.1",
     "react-test-renderer": "^16.4.1",
@@ -128,11 +144,7 @@
       "test/*",
       "!**/test/components",
       "!**/test/output"
-    ],
-    "require": [
-      "babel-register"
-    ],
-    "babel": "inherit"
+    ]
   },
   "engines": {
     "node": ">=8.0"
